[package]
name = "server"
version = "0.1.0"
authors = ["russoturisto <russoturisto@gmail.com>"]

[dependencies]
byteorder = "1"
bytes = "0.4"
common = { path = "../common" }
http = "0.1.13"
httparse = "1.3.3"
futures = "^0"
lazy_static = "1.1.0"
net2 = "0.2"
num_cpus = "1.0"
smallvec = "^0"
tokio = "^0"
tokio-codec = "^0"
tokio-core = "^0"
tokio-io = "^0"
